Lint the Gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ org.gradle.configureondemand=true
 group=app.softwork.serviceloader
 kotlin.native.enableKlibsCrossCompilation=true
 kotlin.js.yarn=false
+org.gradle.jvmargs=-Xmx2048m
