Workaround for KT-78269

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ group=app.softwork.serviceloader
 kotlin.native.enableKlibsCrossCompilation=true
 kotlin.js.yarn=false
 org.gradle.jvmargs=-Xmx2048m
+kotlin.build.archivesTaskOutputAsFriendModule=false
