--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,16 @@
 kotlin.code.style=official
+kotlin.jvm.addClassesVariant=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
+org.gradle.configuration-cache.entries-per-key=100
 org.gradle.unsafe.isolated-projects=false
-org.gradle.configureondemand=true
+kotlin.kmp.isolated-projects.support=enable
+kotlin.native.ignoreDisabledTargets=true
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 group=app.softwork.serviceloader
 kotlin.native.enableKlibsCrossCompilation=true
 kotlin.js.yarn=false
 org.gradle.jvmargs=-Xmx2048m
+kotlin.build.archivesTaskOutputAsFriendModule=false
